--- a/web-art-gallary/package.json
+++ b/web-art-gallary/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "web-art-gallary",
+  "name": "web-art-gallery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "react": "^18.2.0",
